# Flora

./: build.gradle
app/: CMakeLists.txt  build.gradle  multiDexKeep.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/h5/: index.html  style.css
app/src/main/jni/: jni-test1.cpp  lame-1.cpp
app/src/main/res/anim/: page_enter_slide.xml  page_reenter_slide.xml  page_return_slide.xml
app/src/main/res/drawable/: app_bg_btn_unable.xml  bg_btn_render_accent.xml  bg_confirm_button.xml  bg_novel_category_title.xml  bg_novel_content_txt.xml  bg_search_input.xml  bg_search_word.xml  girl_run.xml  light_blue_oval.xml  light_blue_oval_pressed.xml  light_red_oval.xml  light_red_oval_pressed.xml  light_red_oval_selector.xml  login_et_selector.xml  progress_clip.xml  selector_green.xml  selector_tab_about_me.xml  selector_tab_chats.xml  selector_tab_contacts.xml  selector_tab_discover.xml  shape_bg_corner1.xml  shape_bg_corner2.xml  shape_bg_corner3.xml  shape_bg_dash.xml  shape_bg_dash2.xml  shape_bg_gradient.xml  shape_bg_gradient2.xml  shape_bg_line.xml  shape_bg_line2.xml  shape_bg_oval.xml  shape_bg_pack_corner.xml  shape_bg_pack_oval.xml  shape_bg_ripple2.xml  shape_bg_ripple3.xml  shape_bg_ripple4.xml  shape_bg_ripple5.xml  shape_color_selector.xml  video_bg_gradient_bottom.xml  video_bg_gradient_top.xml  video_bg_replay.xml
app/src/main/res/drawable-v21/: shape_bg_ripple2.xml  shape_bg_ripple3.xml  shape_bg_ripple4.xml
app/src/main/res/layout/: activity_album1.xml  activity_album2.xml  activity_album3.xml  activity_album4.xml  activity_album5.xml  (+258 more)
(+1105 files in other folders)
